[package]
name = "libfj-c"
version = "0.1.0"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"
libfj = { path = "libfj", features = ["simple"] }

[lib]
name = "libfj"
crate-type = ["rlib", "cdylib"]
